Fixed the cutoff border on mobile in blogs prev/next and tried to fix scroll issue but doesn't work, fuck css ig

--- a/src/styles/terminal.css
+++ b/src/styles/terminal.css
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-  overflow-y: scroll;
+  overflow-y: hidden;
   zoom: 1;
 }
 
